    Doc without calling AutoDoc, which means that existing recipes that
    call Doc will not show changes.
  * getPackageBranchPathIds() now returns version and fileId as well,
    so that the IdGen class can determine if an older version number
    should be assigned to files.  getPackageBranchPathIds() is now the
    primary mechanism for populating the pathId dictionary.

Changes in 0.60.1:
  * Support for legacy clients (protocol version 29) has been removed from
    the server
  * The server raises an server-side exception if any client with
    protocol less than 32
  * Updated the URL provided in a server-side client version mismatch
    exception
  * Server-side dependency suggestions return more choices, leaving it
    to the client to sort it all out
  * Client uses timestamps to determine which troves to install when their
    flavors score equally
  * Fixed build-side bug handling meta characters ([,*,etc) in file names 
  * "cvc newpkg" now accepts pkgname=label syntax
  * files.contentsChanged() function updated to work with StreamSets
  * Basic local changeset creation, retargeting, and commits work
  * Permissions weren't merged for operations run as non-root users
  * The structure of the repository web interface has been redesigned
    and some authentication UI bugs have been fixed.
  * The repository web interface now requires the conary-web-common package
    to be installed.
  * Committing troves to the repository no longer recompresses non-config
    files
  * Timestamps are set on the server at commit time; the timestamps the 
    client assigned is not used (this is to protect against clients with
    a bad idea of time; servers should be consistent, even if they're
    wrong, and as long as time doesn't go backwards on that server all is
    good)
  * Reworked troves to be representable as streams and implement *basic*
    signature capability
  * Local cook versions are now more sensible.

Changes in 0.60.0: