@@ -113,8 +113,7 @@ def main(argv):
                 fileVersion = sqldb.versionTable.getBareId(versionId)
                 print troveName, troveVersion.asString(), path, \
                       '(sha1: %s)' %h, 'missing from data store',
-                if (fileVersion.isLocal() or fileVersion.isEmerge()
-                    or fileVersion.isLocalCook()):
+                if fileVersion.isOnLocalHost():
                     print ('but this trove was built locally so the contents '
                            'can not be restored'),
                 else:
