@@ -11,6 +11,10 @@ Changes in 0.60.2:
     so that the IdGen class can determine if an older version number
     should be assigned to files.  getPackageBranchPathIds() is now the
     primary mechanism for populating the pathId dictionary.
+  * the local label methods of the version object have been
+    refactored. isLocal() is now onLocalLabel(), isEmerge() is now
+    onEmergeLabel(), etc. isOnLocalHost() has been added as a method
+    to easily determine if a version only exists in the database
 
 Changes in 0.60.1:
   * Support for legacy clients (protocol version 29) has been removed from
